--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,25 @@ nav ul li a:hover::after{
     font-size: 45px;
     margin-top: 10px;
 }
+.header-text .btnHire {
+    cursor: pointer;
+    background-color: #ff004f;
+    margin-top: 10px;
+    border-radius: 8px;
+    border: none;
+    padding: 14px;
+    z-index:222;
+}
+/* rotate 90deg when any part of the button is hovered */
+.btn2:hover i.fa-arrow-right {
+    transform: rotate(90deg);
+    transition: transform 0.5s ease;
+}
+.header-text button a{
+    text-decoration: none;
+    color: white;
+    font-size: 16px;
+}
 
 .header-text span{
     color: #ff004f;
@@ -444,7 +463,7 @@ nav .fas-menu{
        
     }
     .header-text{
-        margin-top: 80%;
+        margin-top: 40%;
         font-size: 14px;
         text-align: center;
     }
@@ -457,6 +476,16 @@ nav .fas-menu{
     .header-text h1{
         font-size: 40px;
         color:rgb(63, 61, 61);
+    }
+
+    .header-text .btnHire {
+        cursor: pointer;
+        background-color: #ff004f;
+        margin-top: 10px;
+        border-radius: 8px;
+        border: none;
+        padding: 14px;
+        z-index:222;
     }
     /*  @media query for menu bar*/
     nav .fas-menu{
